--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <!-- CSS Styles -->
+    <!-- CSS Styles. Is this even working? -->
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <title>Construction Dashboard</title>
   </head>
